--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,11 @@
-.gradient-background {
-  background: linear-gradient(300deg, #a600ff, #4cccff, #acef72);
-  background-size: 180% 180%;
-  animation: gradient-animation 18s ease infinite;
+.carousel-inner{
+    width: 100%;
+    height: 700px;
+    padding-bottom: 50px;
+    margin-bottom: 20px;
 }
 
-@keyframes gradient-animation {
-  0% {
-    background-position: 0% 50%;
-  }
-  50% {
-    background-position: 100% 50%;
-  }
-  100% {
-    background-position: 0% 50%;
-  }
-}
-
-.icon-square {
-  width: 3rem;
-  height: 3rem;
-  border-radius: 0.75rem;
-}
-
-.profile-img {
-  border-radius: 50%;
-  height: 100px;
+.nav-link{
+    color: rgb(1, 11, 19);
+    font-size: large;
 }
